# radium-tech-assessment

./: .gitignore  README.md  docker-compose.yaml
radium_backend/: Dockerfile  README.md  pyproject.toml
radium_backend/app/: main.py
radium_backend/app/api/: users.py
radium_backend/app/models/: user.py
radium_backend/app/schemas/: user.py
radium_backend/scripts/: generate_demo_users.py
radium_backend/tests/: test_integration.py
radium_frontend/: Dockerfile  README.md  package-lock.json  package.json
radium_frontend/src/: App.js
radium_frontend/src/components/: Modal.js  UserForm.js  UserList.js
radium_frontend/src/pages/: HomePage.js  UserDetailPage.js
radium_frontend/src/services/: api.js
