[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend for Radium Tech Assessment"
authors = ["Akshay Jain <akshayjain1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
beanie = "^1.11.0"
motor = "^3.6.0"
pydantic = "^2.9.2"
protobuf = "^5.28.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"